cusomter profile fixes

--- a/src/Frontend/src/app/Feature/admin-dashboard/admin-dashboard/admin-dashboard.html
+++ b/src/Frontend/src/app/Feature/admin-dashboard/admin-dashboard/admin-dashboard.html
@@ -89,7 +89,7 @@
                 routerLinkActive="active"
                 class="list-group-item list-group-item-action border-bottom"
               >
-                <i class="bi bi-text-left me-2"></i> Support Center
+                <i class="fa-solid fa-headphones pe-2"></i> Support Center
               </a>
             </div>
           </div>
