--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -72,6 +72,13 @@
             >
               Show Orders
             </button>
+
+                        <button
+              type="button"
+              class="btn btn-outline-warning ms-1"
+              (click)="showReviews()">
+              Show Reviews
+            </button>
           </div>
         </div>
       </div>
@@ -383,14 +390,15 @@
                         [ngClass]="{
                           'bg-warning text-dark': appt.status === 'Pending',
                           'bg-info': appt.status === 'Confirmed',
-                          'bg-danger': appt.status === 'Cancelled'
+                          'bg-danger': appt.status === 'Cancelled',
+                          'bg-success': appt.status === 'Completed'
                         }"
                       >
                         {{ appt.status }}
                       </span>
                     </td>
                     <td>
-                      <button [disabled]="appt.status !== 'Confirmed'" class="review-button" (click)="writeReview(appt.id)">Write a Review</button>
+                      <button [disabled]="appt.status !== 'Completed'" class="review-button" (click)="writeReview(appt.id, appt.doctorId)">Write a Review</button>
                     </td>
                     <!-- <td>{{ appt.createdAt | date : "medium" }}</td> -->
                   </tr>
