changed doctor view for customer to show the booking - blogs - rating in the same page , added pagination for blogs - added a new slider for reviews , fixed write review bug in customer profile , changed some layout styles

--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -398,7 +398,7 @@
                       </span>
                     </td>
                     <td>
-                      <button [disabled]="appt.status !== 'Completed'" class="review-button" (click)="writeReview(appt.id, appt.doctorId)">Write a Review</button>
+                      <button [disabled]=" appt.status !== 'Completed' || appt.isReviewable" class="review-button" (click)="writeReview(appt.id, appt.doctorId)">Write a Review</button>
                     </td>
                     <!-- <td>{{ appt.createdAt | date : "medium" }}</td> -->
                   </tr>
