--- a/src/Frontend/src/app/Feature/doctors/doctors.html
+++ b/src/Frontend/src/app/Feature/doctors/doctors.html
@@ -175,7 +175,7 @@
                   [routerLink]="['/doctors', doctor.id]"
                   class="btn btn-outline-primary btn-sm btn-animated d-flex align-items-center"
                 >
-                  <i class="fas fa-paper-plane fs-3 p-2"></i>
+                 Show Details <i class="fas fa-paper-plane fs-3 p-2"></i>
                 </a>
 
                 <!-- } -->
@@ -183,12 +183,12 @@
             </div>
           </div>
         </a>
-                 <button
+                 <!-- <button
                   class="btn mx-2 btn-sm btn-reviews-standout"
                   (click)="viewReviews(doctor.id)"
                 >
                    <i class="bi bi-star-fill me-1"></i> View Reviews
-                </button>
+                </button> -->
       </div>
 
 
