fix-delivery-method

--- a/src/Frontend/src/app/Feature/support/support.html
+++ b/src/Frontend/src/app/Feature/support/support.html
@@ -32,10 +32,10 @@
                     <option value="" disabled selected>
                       ---- Select service ---- *
                     </option>
-                    <option value="0">Consulting</option>
-                    <option value="1">Development</option>
+                    <option value="0">Support</option>
+                    <option value="1">Consulting</option>
                     <option value="2">Marketing</option>
-                    <option value="3">Support</option>
+                    <option value="3">Issue</option>
                   </select>
                 </div>
                 <div
